--- a/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
+++ b/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
@@ -32,10 +32,10 @@
                                         Xiangzhi Yu, Jiayu Xie</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.4 <date>2022</date>
+                <edition>v 1.0.0 <date>2023</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="2">
+                        <publicationStmt status="1.a">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -57,7 +57,7 @@
                 <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                <date>2022-07-04</date>
+                <date>2023-01-26</date>
             </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh67" type="text">
@@ -76,7 +76,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-01-19T10:59:20.51Z" user="admin">19/01/2023 10:59:20</note>
+                                <note type="lastUpdated" date-time="2023-01-26T16:58:31.71Z" user="admin">26/01/2023 16:58:31</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-09T07:11:15.835Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.g" date-time="2019-12-11T09:08:42.75Z" user="andreas">2.g</note>
@@ -118,6 +118,8 @@
                                 <note type="updated" update="translation-status" value="2" date-time="2022-07-13T13:36:11.029Z" user="line-tofte">2</note>
                                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-13T13:36:11.029Z" user="line-tofte">Auto (update-publication-status)</note>
                             <note type="updated" update="text-version" value="0.0.4" date-time="2023-01-19T10:59:14.728Z" user="line-tofte">Auto (update-contributors)</note>
+                            <note type="updated" update="translation-status" value="1.a" date-time="2023-01-26T16:58:26.108Z" user="martina-cotter">1.a</note>
+                            <note type="updated" update="text-version" value="1.0.0" date-time="2023-01-26T16:58:26.108Z" user="martina-cotter">First published version.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -234,7 +236,7 @@
                                                 scriptures that exists in both Chinese and Tibetan
                                                 translation. No Sanskrit original has survived. The
                                                 Chinese translation of the sūtra, <title xml:lang="Zh-Ltn">Mohe jiaye hui</title>
-                                                <title xml:lang="zh">摩訶迦葉會</title> (<ref target="https://cbetaonline.dila.edu.tw/en/T0310_088">Taishō 310 [23]</ref>), was made in 541 by *Upaśūnya (<foreign xml:lang="zh">月婆首那</foreign>) and later included
+                                                <title xml:lang="zh">摩訶迦葉會</title> (<ref target="https://cbetaonline.dila.edu.tw/en/T0310_088">Taishō 310 [23]</ref>), was produced in 541 by *Upaśūnya (<foreign xml:lang="zh">月婆首那</foreign>) and later included
                                                 as part of the Chinese Ratnakūṭa compiled in the
                                                 eighth century <hi rend="small-caps">ce</hi> by
                                                 Bodhiruci. The Tibetan translation is attributed in
@@ -250,7 +252,7 @@
                                                   pp. 28–29; Phangthangma 2003, p. 5 (<title xml:lang="Bo-Ltn">’phags pa byams pa’i seng ge
                                                   sgra</title>). The Phangthangma dates to the ninth
                                                   century but likely postdates the Denkarma. </note>
-                                                The text was also found at Dunhuang (<ref target="http://idp.bl.uk/database/oo_loader.a4d?pm=Pelliot%20tibétain%2093;img=1">Pelliot tibétain 93</ref>), which means that it
+                                                The text was also found at Dunhuang (<ref target="http://idp.bl.uk/database/oo_loader.a4d?pm=Pelliot%20tibétain%2093;img=1">Pelliot tibétain 93</ref>), which suggests that it
                                                 was widely disseminated across the Tibetan-speaking
                                                 world from the ninth to the early eleventh centuries
                                                   <hi rend="small-caps">ce</hi>.</p>
@@ -311,7 +313,7 @@
                                                 focused on stūpas (and by implication relics), the
                                                 present sūtra might be contrasted with <title xml:lang="en">The Avalokinī Sūtra</title> (Toh
                                                   195)<note place="end" xml:id="UT22084-043-004-16">
-                                                  Dharmacakra Translation Committee, trans., <title xml:lang="en">
+                                                  Dharmachakra Translation Committee, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh195.html">The Avalokinī Sūtra</ref>
                             </title> (84000:
                                                   Translating the Words of the Buddha, 2021).
@@ -358,13 +360,13 @@
                                                   2021).</note>
                                                 <title xml:lang="en">Maitreya’s Setting Out</title>
                                                 (<title xml:lang="Sa-Ltn">Maitreya­prasthāna</title>, Toh 198),<note place="end" xml:id="UT22084-043-004-22">
-                                                  Dharmacakra Translation Committee, trans., <title xml:lang="en">
+                                                  Dharmachakra Translation Committee, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh198.html">Maitreya’s Setting Out</ref>
                             </title> (84000:
                                                   Translating the Words of the Buddha, 2021).</note>
                                                 and <title xml:lang="en">The Sūtra on Maitreya’s
                                                   Birth in the Heaven of Joy</title> (Toh 199).<note place="end" xml:id="UT22084-043-004-23">
-                                                  Dharmacakra Translation Committee, trans., <title xml:lang="en">
+                                                  Dharmachakra Translation Committee, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh199.html">The Sūtra on Maitreya’s Birth in the Heaven of
                                                   Joy</ref>
                             </title> (84000: Translating the Words of
@@ -484,7 +486,7 @@
                                                   they practice yoga (<foreign xml:lang="Bo-Ltn" type="quote">rnal ’byor du
                                                   bgyi</foreign>)?”</note>
                     </p>
-                                        <p tid="36">The Blessed One  to Venerable
+                                        <p tid="36">The Blessed One replied to Venerable
                                                 Mahākāśyapa, “Excellent, Kāśyapa! You have asked
                                                 such a question for the benefit of many beings, for
                                                 the happiness of many beings, out of love for the
@@ -664,7 +666,7 @@
                                                 swindler-ascetic.’</p>
                                         <milestone unit="chunk" xml:id="UT22084-043-004-55"/>
                                         <p tid="47">“Now, Kāśyapa, what is a swindler-ascetic? There
-                                                are four types of swindler-ascetic. What are the
+                                                are four types of swindler-ascetics. What are the
                                                 four? Kāśyapa, a monk who has the appearance,
                                                 distinguishing marks, and figure of an ascetic but
                                                 whose moral discipline is deficient and who is an
@@ -679,7 +681,7 @@
                                                 of swindler-ascetic. One who praises himself and
                                                 denigrates others is the fourth type of
                                                 swindler-ascetic. <ref cRef="F.71.a" type="folio" xml:id="UT22084-043-004-574"/> Those, Kāśyapa, are
-                                                the four types of swindler-ascetic.</p>
+                                                the four types of swindler-ascetics.</p>
                                         <milestone unit="chunk" xml:id="UT22084-043-004-56"/>
                                         <p tid="48">“Kāśyapa, imagine there came along a fierce,
                                                 coarse, ferocious man who was physically powerful
@@ -1105,7 +1107,7 @@
                                                 in ten- or twenty-years’ time from another region,
                                                 return this treasure to me.’ When he hands the
                                                 treasure over, the man accepts it and hides and
-                                                protects it well, and when the other man returns he
+                                                protects it well, and when the other man returns, he
                                                 gives it back to him.</p>
                                         <milestone unit="chunk" xml:id="UT22084-043-004-102"/>
                                         <p tid="86">“In the same way, <ref cRef="F.76.b" type="folio" xml:id="UT22084-043-004-585"/>
@@ -1440,8 +1442,7 @@
                                                   <foreign xml:lang="Bo-Ltn" type="quote">le
                                                   lan</foreign> in the Stok, Narthang, and Lhasa
                                                   Kangyurs in place of the Degé reading <foreign xml:lang="Bo-Ltn" type="quote">la
-                                                  lan</foreign>.</note> what do you think, Maitreya—
-                                                with what intention would the merchant or
+                                                  lan</foreign>.</note> what do you think, Maitreya—with what intention would the merchant or
                                                 householder enter the king’s prison?”</p>
                                         <p tid="119">The bodhisattva great being Maitreya replied to
                                                 the Blessed One, “Blessed One, resolved to free
@@ -1758,7 +1759,7 @@
                                         <p tid="148">Maitreya replied, “Yes, Blessed One. Indeed so,
                                                 Sugata. As I understand the meaning of what the
                                                 Tathāgata has said, until he has accomplished that
-                                                objective he will not be distracted from it; he will
+                                                objective, he will not be distracted from it; he will
                                                 have no thought of food or inclination toward sloth
                                                 or sleep. Blessed One, that is because, setting
                                                 aside other external things, it would be for the
@@ -2580,7 +2581,7 @@
                                                 said this, the bodhisattva Sumati replied, ‘Blessed
                                                 One, such an analogy given by the Tathāgata is
                                                 amazing. Those roots of virtue are not easy to
-                                                conceive and they are therefore inconceivable.’ </p>
+                                                conceive, and they are therefore inconceivable.’ </p>
                                         <milestone unit="chunk" xml:id="UT22084-043-004-277"/>
                                         <p tid="240">“Then, Kāśyapa, the Tathāgata Myriad Flowers
                                                 said to the bodhisattva Sumati, ‘Son of noble
@@ -3323,7 +3324,7 @@
                                         <p tid="319">The monks <term ref="UT22084-043-004-543">Dharma</term> and Sudharma said, ‘But,
                                                 friends, is it not that moral discipline, samādhi,
                                                 wisdom, liberation, and the knowledge and vision of
-                                                liberation are themselves worthy of worship but
+                                                liberation are themselves worthy of worship, but
                                                 bodily relics are not?’<note place="end" xml:id="UT22084-043-004-361"> The Tibetan here is
                                                   <foreign xml:lang="Bo-Ltn" type="quote">’o na
                                                   tshul khrims dang / ting nge ’dzin dang / shes rab
@@ -3383,7 +3384,7 @@
                                                 possession of which he receives worship. That is how
                                                 the Tathāgata is worshiped. </p>
                                         <milestone unit="chunk" xml:id="UT22084-043-004-369"/>
-                                        <p tid="327">“ ‘Not generating perceptions or signs is
+                                        <p tid="327">“‘Not generating perceptions or signs is
                                                 worship of the Tathāgata. Not conceptualizing a self
                                                 or engaging in thoughts is worship of the Tathāgata.
                                                 Not going to the next world, not coming into this
@@ -3658,7 +3659,7 @@
                                                 yakṣa, gandharva, asura, garuḍa, mahoraga, human, or
                                                 nonhuman create the bodies of the tathāgatas?”</p>
                                         <p tid="348">Kāśyapa said, “No, Blessed One, they cannot.
-                                                The Tathāgata is peerless and his body is
+                                                The Tathāgata is peerless, and his body is
                                                 inconceivable. For that reason it is not easy for
                                                 them to create his bodies.”</p>
                                         <milestone unit="chunk" xml:id="UT22084-043-004-391"/>
@@ -4398,7 +4399,7 @@
                                                 for Success: The Monk Kāśyapa and Strategies of
                                                 Legitimation in Earlier Mahāyāna Buddhist
                                                 Scriptures.” <title xml:lang="fr">Journal
-                                                  Asiatique</title> 291, no. 1-2 (2003), pp.
+                                                        Asiatique</title> 291, no. 1–2 (2003), pp.
                                                 173–219.</bibl>
                                         <bibl xml:id="UT22084-043-004-486">UCSB Buddhist Studies
                                                 Translation Group, trans. <title xml:lang="en">
@@ -4583,14 +4584,6 @@
                                                   <term xml:lang="Bo-Ltn" status="verified">bslab pa’i gzhi </term>
                                                   <term xml:lang="bo">བསླབ་པའི་གཞི།</term>
                                                   <term xml:lang="Sa-Ltn" status="verified">śikṣāpada</term>
-                                                </gloss>
-                    </item>
-                                        <item>
-                        <gloss mode="marked" type="term" xml:id="UT22084-043-004-507">
-                                                  <term>training</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">bslab pa </term>
-                                                  <term xml:lang="bo">བསླབ་པ།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">śikṣā</term>
                                                 </gloss>
                     </item>
                                         <item>
