--- a/translations/kangyur/translations/081-007_toh438-the_praise_of_tara_in_twentyone_homages.xml
+++ b/translations/kangyur/translations/081-007_toh438-the_praise_of_tara_in_twentyone_homages.xml
@@ -26,7 +26,7 @@
                 <consultant role="advisor" ref="contributors.xml#person-76">Wiesiek Mical</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.18 <date>2022</date>
+                <edition>v 1.2.21 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -49,7 +49,7 @@
             <sourceDesc>
                 <bibl key="toh438" type="text">
                     <ref>Toh 438</ref>
-                    <biblScope>Degé Kangyur, vol. 81 (rgyud, ca), folios 42.b–43.b</biblScope>
+                    <biblScope>Degé Kangyur, vol. 81 (rgyud ’bum, ca), folios 42.b–43.b</biblScope>
                     <author role="translatorTib">Nyen Lotsawa Darma Drak</author>
                     <location work="UT4CZ5369" count-pages="3">
                         <volume number="81" start-page="84" end-page="86"/>
@@ -59,7 +59,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-06T17:37:42.871Z" user="admin">06/12/2022 17:37:42</note>
+                <note type="lastUpdated" date-time="2023-01-26T20:24:41.101Z" user="admin">26/01/2023 20:24:41</note>
 
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2020-03-06T09:58:21.069Z" user="line-tofte">2.g</note>
@@ -86,7 +86,7 @@
     <note type="updated" update="text-version" value="1.2.10" date-time="2021-04-22T19:44:02.356Z" user="celso">minor correction to markup, new files not needed</note>
     <note type="updated" update="text-version" value="1.2.11" date-time="2021-06-26T03:56:47.483Z" user="celso">kiṃnara to kinnara</note>
     <note type="updated" update="text-version" value="1.2.12" date-time="2021-07-31T05:36:14.864Z" user="mike">seven changed to seventy</note>
-    <note type="updated" update="text-version" value="1.2.13" date-time="2021-08-13T20:50:05.391Z" user="celso">fixed minor typo in glossary</note>    <note type="updated" update="text-version" value="1.2.14" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.2.15" date-time="2022-10-25T19:02:15.018Z" user="martina-cotter">Added pending links.</note>    <note type="updated" update="text-version" value="1.2.16" date-time="2022-10-26T20:00:16.698Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>    <note type="updated" update="text-version" value="1.2.17" date-time="2022-11-04T14:23:55.657Z" user="celso">Update "Samye Translations and Publications" to "Samye Translations"</note>    <note type="updated" update="text-version" value="1.2.18" date-time="2022-12-06T17:37:40.054Z" user="martina-cotter">Updated bib entry.</note>
+    <note type="updated" update="text-version" value="1.2.13" date-time="2021-08-13T20:50:05.391Z" user="celso">fixed minor typo in glossary</note>    <note type="updated" update="text-version" value="1.2.14" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.2.15" date-time="2022-10-25T19:02:15.018Z" user="martina-cotter">Added pending links.</note>    <note type="updated" update="text-version" value="1.2.16" date-time="2022-10-26T20:00:16.698Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>    <note type="updated" update="text-version" value="1.2.17" date-time="2022-11-04T14:23:55.657Z" user="celso">Update "Samye Translations and Publications" to "Samye Translations"</note>    <note type="updated" update="text-version" value="1.2.18" date-time="2022-12-06T17:37:40.054Z" user="martina-cotter">Updated bib entry.</note>    <note type="updated" update="text-version" value="1.2.19" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.2.20" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>    <note type="updated" update="text-version" value="1.2.21" date-time="2023-01-26T20:24:38.255Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
