--- a/translations/kangyur/translations/090-038_toh594-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-038_toh594-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -24,7 +24,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.2.10 <date>2022</date>
+                <edition>v 1.2.13 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -49,7 +49,7 @@
       <sourceDesc>
         <bibl key="toh594" type="text">
           <ref>Toh 594</ref>
-          <biblScope>Degé Kangyur, vol. 90 (rgyud, pha), folios 230.a–237.b</biblScope>
+          <biblScope>Degé Kangyur, vol. 90 (rgyud ’bum, pha), folios 230.a–237.b</biblScope>
           <author role="translatorTib">Dharmasena</author>
           <author role="translatorTib">Bari</author>
           <location work="UT4CZ5369" count-pages="16">
@@ -60,7 +60,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-10-17T18:40:44.225Z" user="admin">17/10/2022 18:40:44</note>
+        <note type="lastUpdated" date-time="2023-01-26T20:26:55.574Z" user="admin">26/01/2023 20:26:55</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:56:19.606Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-12-10T12:56:19.606Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-16T08:20:54.493Z" user="line-tofte">Auto (update-contributors)</note>
@@ -110,6 +110,9 @@
         <note type="updated" update="text-version" value="1.2.8" date-time="2022-10-01T11:41:53.667Z" user="john">Edits to notes.</note>
           <note type="updated" update="text-version" value="1.2.9" date-time="2022-10-03T10:11:16.089Z" user="john">Auto (update-titles)</note>
           <note type="updated" update="text-version" value="1.2.10" date-time="2022-10-17T18:40:41.379Z" user="celso">Fixed bad link</note>
+          <note type="updated" update="text-version" value="1.2.11" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+          <note type="updated" update="text-version" value="1.2.12" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+          <note type="updated" update="text-version" value="1.2.13" date-time="2023-01-26T20:26:52.731Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
