--- a/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -25,7 +25,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.2.6 <date>2022</date>
+                <edition>v 1.2.9 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -50,7 +50,7 @@
       <sourceDesc>
         <bibl key="toh595" type="text">
           <ref>Toh 595</ref>
-          <biblScope>Degé Kangyur, vol. 90 (rgyud, pha), folios 237.b–242.a</biblScope>
+          <biblScope>Degé Kangyur, vol. 90 (rgyud ’bum, pha), folios 237.b–242.a</biblScope>
           <location work="UT4CZ5369" count-pages="10">
             <volume number="90" start-page="472" end-page="481"/>
           </location>
@@ -59,7 +59,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-12-20T01:10:15.916Z" user="admin">20/12/2022 01:10:15</note>
+        <note type="lastUpdated" date-time="2023-01-26T20:28:32.556Z" user="admin">26/01/2023 20:28:32</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:57:20.806Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-02T13:57:20.806Z" user="line-tofte">Auto
@@ -113,6 +113,9 @@
         <note type="updated" update="text-version" value="1.2.4" date-time="2022-10-03T10:11:35.733Z" user="john">Auto (update-titles)</note>
           <note type="updated" update="text-version" value="1.2.5" date-time="2022-10-03T10:12:34.643Z" user="john">Auto (update-titles)</note>
           <note type="updated" update="text-version" value="1.2.6" date-time="2022-12-20T01:10:13.068Z" user="andre">Glossary activated in CG</note>
+          <note type="updated" update="text-version" value="1.2.7" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+          <note type="updated" update="text-version" value="1.2.8" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+          <note type="updated" update="text-version" value="1.2.9" date-time="2023-01-26T20:28:29.716Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
