--- a/translations/kangyur/translations/090-040_toh596-the_incantation_and_practice_of_usnisavijaya.xml
+++ b/translations/kangyur/translations/090-040_toh596-the_incantation_and_practice_of_usnisavijaya.xml
@@ -25,7 +25,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.2.4 <date>2022</date>
+                <edition>v 1.2.7 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -50,7 +50,7 @@
       <sourceDesc>
         <bibl key="toh596" type="text">
           <ref>Toh 596</ref>
-          <biblScope>Degé Kangyur, vol. 90 (rgyud, pha), folios 242.a–243.b</biblScope>
+          <biblScope>Degé Kangyur, vol. 90 (rgyud ’bum, pha), folios 242.a–243.b</biblScope>
           <location work="UT4CZ5369" count-pages="4">
             <volume number="90" start-page="481" end-page="484"/>
           </location>
@@ -59,7 +59,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-12-20T17:58:54.745Z" user="admin">20/12/2022 17:58:54</note>
+        <note type="lastUpdated" date-time="2023-01-26T20:29:32.116Z" user="admin">26/01/2023 20:29:32</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:57:42.226Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-10T12:57:42.226Z" user="line-tofte">Auto
@@ -99,6 +99,9 @@
         <note type="updated" update="text-version" value="1.2.2" date-time="2022-09-30T15:31:21.721Z" user="john">Further minor edits.</note>
           <note type="updated" update="text-version" value="1.2.3" date-time="2022-10-03T10:11:47.564Z" user="john">Auto (update-titles)</note>
           <note type="updated" update="text-version" value="1.2.4" date-time="2022-12-20T17:58:51.858Z" user="andre">Glossary activated in CG</note>
+          <note type="updated" update="text-version" value="1.2.5" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+          <note type="updated" update="text-version" value="1.2.6" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+          <note type="updated" update="text-version" value="1.2.7" date-time="2023-01-26T20:29:29.276Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
